// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Onboarding Features component should pass additional props to Slide 1`] = `
Array [
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <SafeAreaView
        style={[Function]}
      >
        <View>
          <View
            style={[Function]}
          >
            <H2
              style={[Function]}
            >
              Hey friend!
            </H2>
          </View>
          <H5
            style={[Function]}
          >
            We'd like to help personalize your mobile experience so we can help you with every step on your journey.
          </H5>
        </View>
      </SafeAreaView>
    </View>
  </RCTScrollView>,
  <PaddedView
    style={[Function]}
    vertical={false}
  >
    <SafeAreaView
      edges={
        Array [
          "bottom",
        ]
      }
    >
      <Button
        onPress={[MockFunction]}
        style={Object {}}
      >
        <H5>
          Next
        </H5>
        <Icon
          name="arrow-next"
        />
      </Button>
    </SafeAreaView>
  </PaddedView>,
]
`;

exports[`The Onboarding Features component should render 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "minHeight": "100%",
    }
  }
  overScrollMode="auto"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <SafeAreaView
      style={[Function]}
    >
      <View>
        <View
          style={[Function]}
        >
          <H2
            style={[Function]}
          >
            Hey friend!
          </H2>
        </View>
        <H5
          style={[Function]}
        >
          We'd like to help personalize your mobile experience so we can help you with every step on your journey.
        </H5>
      </View>
    </SafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`The Onboarding Features component should render a BackgroundComponent 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "minHeight": "100%",
    }
  }
  overScrollMode="auto"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <GradientOverlayImage
      source="https://picsum.photos/375/812/?random"
    />
    <SafeAreaView
      style={[Function]}
    >
      <View>
        <View
          style={[Function]}
        >
          <H2
            style={[Function]}
          >
            Hey friend!
          </H2>
        </View>
        <H5
          style={[Function]}
        >
          We'd like to help personalize your mobile experience so we can help you with every step on your journey.
        </H5>
      </View>
    </SafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`The Onboarding Features component should render a custom description 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "minHeight": "100%",
    }
  }
  overScrollMode="auto"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <SafeAreaView
      style={[Function]}
    >
      <View>
        <View
          style={[Function]}
        >
          <H2
            style={[Function]}
          >
            Hey friend!
          </H2>
        </View>
        <H5
          style={[Function]}
        >
          Custom description text
        </H5>
      </View>
    </SafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`The Onboarding Features component should render a custom first name 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "minHeight": "100%",
    }
  }
  overScrollMode="auto"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <SafeAreaView
      style={[Function]}
    >
      <View>
        <View
          style={[Function]}
        >
          <H2
            style={[Function]}
          >
            Hey firstName!
          </H2>
        </View>
        <H5
          style={[Function]}
        >
          We'd like to help personalize your mobile experience so we can help you with every step on your journey.
        </H5>
      </View>
    </SafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`The Onboarding Features component should render a custom title 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "minHeight": "100%",
    }
  }
  overScrollMode="auto"
  slideTitle="Custom title text"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <SafeAreaView
      style={[Function]}
    >
      <View>
        <View
          style={[Function]}
        >
          <H2
            style={[Function]}
          >
            Hey friend!
          </H2>
        </View>
        <H5
          style={[Function]}
        >
          We'd like to help personalize your mobile experience so we can help you with every step on your journey.
        </H5>
      </View>
    </SafeAreaView>
  </View>
</RCTScrollView>
`;
